--- a/index.css
+++ b/index.css
@@ -288,6 +288,8 @@ hr {
   color: #fff;
   background: #1d1e22;
   text-align: center;
+  padding-top: 40px;
+  padding-bottom: 40px;
 }
 .copyright {
   font-size: 15px;
