--- a/index.css
+++ b/index.css
@@ -7,10 +7,13 @@
     z-index: 1;
   }
   
-  .row{
-    margin: 0px 15px;
-  }
-
+.row{
+  margin: 0px 0px;
+}
+.col-md-8{
+  padding-left: 0px;
+  padding-right:0px;
+}
   nav {
     display: flex;
     justify-content: space-between;
@@ -158,6 +161,13 @@
   width: 100%;
 }
 
+.main3 {
+  background-color:#fff;
+  height: 120px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+}
 .container {
     max-width: 100%;
     position: relative;
@@ -166,6 +176,13 @@
     margin: 10px 0px
     
   }
+.container2 {
+  position: relative;
+  top: 120px;
+  padding: 0px 0px;
+  margin: 10px 0px
+  
+}
 h1{
   font-family: 'Kiwi Maru', serif;
   text-align: center;
@@ -176,8 +193,17 @@ h2{
   font-family: 'Kiwi Maru', serif;
   font-size: 40px;
   text-align: center;
+  padding-top:20px;
   color:#000000;
 }
+.h2-1{
+  font-family: 'Kiwi Maru', serif;
+  font-size: 40px;
+  text-align: center;
+  padding-top:20px;
+  color:#000000;
+}
+.br-sp {display:none}
 p {
   text-align: center;
   font-family: 'Kiwi Maru', serif;
@@ -186,9 +212,10 @@ p {
   color:#fff;
 }
 .intro {
-  text-align: center;
+  text-align: left;
   font-family: 'Noto Sans JP', sans-serif;
   font-size: 18px;
+  margin: 10px 15px;
   color:#000000;
   }
 .desc {
@@ -198,11 +225,28 @@ p {
   font-size: 18px;
   color:#000000;
   }
+.intro2 {
+  text-align: left;
+  font-family: 'Noto Sans JP', sans-serif;
+  padding-left:50px;
+  font-size: 24px;
+  color:#000000;
+  }
 .title2 {
   position: relative;
   top: 340px;
 }
+.col-md-5{
+  padding: auto 15px !important;
+}
 @media only screen and (max-width: 768px) {
+  .intro2 {
+    text-align: left;
+    font-family: 'Noto Sans JP', sans-serif;
+    font-size: 18px;
+    padding-left:0px;
+    color:#000000;
+    }
   h1{
       font-family: 'Kiwi Maru', serif;
       text-align: center;
@@ -216,12 +260,21 @@ p {
   h2{
     font-family: 'Kiwi Maru', serif;  
     text-align: center;
-    font-size: 34px;
+    font-size: 32px;
+    padding-top:0px;
     color:#000000;
     }
+  .h2-1{
+    font-family: 'Kiwi Maru', serif;
+    font-size: 24px;
+    text-align: center;
+    padding-top:20px;
+    color:#000000;
+  }
+  .br-sp {display:block}
   .intro {
-  text-align: center;
-  font-family: 'Kiwi Maru', serif;
+  text-align: left;
+  font-family: 'Noto Sans JP', serif;
   font-size: 16px;
   color:#000000;
   }
@@ -261,6 +314,17 @@ hr {
   font-size: 20px;
 }
 
+.sponser {
+  padding-top: 15px;
+  padding-bottom: 60px;
+  padding-left:10px;
+  padding-right:10px;
+  margin: 0px 15px;
+  border: solid 3px #000000;
+  text-align: center;
+  font-family: 'Kiwi Maru', serif;
+  font-size: 20px;
+}
 .button2 {	
   display: block;
   position: relative;
@@ -291,6 +355,13 @@ hr {
   padding-top: 40px;
   padding-bottom: 40px;
 }
+.sien{
+  position: relative;
+  top: 25px;
+  margin: 0px auto;
+  margin-top: 180px;
+  margin-bottom: 20px;
+}
 .copyright {
   font-size: 15px;
   margin: 10px 10px;
@@ -314,9 +385,13 @@ hr {
 
 .cp_timeline04 {
   position: relative;
-  top: 120px;
+  top: 220px;
   margin: 3em auto;
   padding-bottom: 2em;
+}
+.historyhead {
+  position: relative;
+  top: 200px;
 }
 .cp_timeline04:before {
   position: absolute;
@@ -329,6 +404,7 @@ hr {
 }
 .cp_timeline04 .timeline_item {
   margin: 0px 0px 0px 80px;
+  padding-bottom: 20px;
   opacity: 0;
   transform: translateY(30px);
   transition: opacity 0.8s ease-out, transform 0.8s ease-out;
@@ -368,13 +444,21 @@ hr {
 
 }
 .cp_timeline04 .timeline_item .desc {
-  font-size: 0.8em;
+  font-size: 18px;
   line-height: 20px;
   margin-top: 10px;
   padding-left: 20px;
   border-left: 1px solid #0d47a1;
-  margin-bottom: 60px;
+  margin-bottom: 0px;
 }
+
+hr {
+  height: 2px;
+  background-color: #000000;
+  width: 80%;
+  border: none;
+ }
+
 @media only screen and (max-width: 767px) {
   .time{
     padding-left: 0px !important;
@@ -396,11 +480,52 @@ hr {
   .cp_timeline04 .timeline_item .desc {
     padding-left: 0px;
     border-top: 1px solid #0d47a1;
+    font-size:1em;
     border-left: none;
   }
 }
 
-  .copyright {
-    text-align: left;
+
+.ribbon12-wrapper {  
+  display: block;
+  position: relative;
+  margin: 15px auto;
+  padding: 10px 10px;
+  width: 92%;
+  background: #f1f1f1;
   }
+
+.ribbon12 {
+  display: inline-block;
+  position: relative;
+  box-sizing: border-box;
+  padding: 10px;
+  margin: 0 0 0 -30px;
+  width: calc(100% + 40px);
+  font-size: 22px;
+  color: white;
+  background: #000;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+}
+
+.ribbon12:before {
+  position: absolute;
+  content: '';
+  top: 100%;
+  left: 0;
+  border: none;
+  border-bottom: solid 15px transparent;
+  border-right: solid 20px #83866c;
+}
+
+.continue{
+  width:"100%";
+  text-align:right;
+  padding-top: 10px;
+  padding-bottom: 0px;
+}
+
+.samuneiru{
+  text-align:center;
+  margin: 10px auto;
 }
