--- a/index.css
+++ b/index.css
@@ -14,6 +14,14 @@
   padding-left: 0px;
   padding-right:0px;
 }
+.col-6{
+  padding:0px auto;
+  text-align:center;
+}
+.footmidasi{
+  font-size:20px;
+  width: 100%;
+}
   nav {
     display: flex;
     justify-content: space-between;
@@ -528,4 +536,77 @@ hr {
 .samuneiru{
   text-align:center;
   margin: 10px auto;
+}
+
+.return{
+  text-align:left;
+  padding-left:25px;
+  width:100%;
+  margin-top:15px;
+}
+
+.blogmain{
+  text-align:left;
+  font-size: 18px;
+  font-family: 'Noto Sans JP', sans-serif;
+  color: #000000;
+  padding: 5px 15px;
+}
+
+.blogtitle{
+  text-align:center;
+  width:100%;
+  margin: 10px auto;
+}
+
+
+.img-frame{
+  position: relative;
+  width: 100%;
+  height: 400px;
+  overflow: hidden;
+  margin: 0 auto;
+}
+.img-01, .img-02, .img-03{
+  position: absolute;
+  top:0;
+  left:0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.img-01{
+  background-image: url('image/pic5.jpg');
+  animation: slide-animation-01 24s infinite;
+}
+.img-02{
+  background-image: url('image/rikurixmany.jpg');
+  animation: slide-animation-02 24s infinite;
+}
+.img-03{
+  background-image: url('image/pic6.jpg');
+  animation: slide-animation-03 24s infinite;
+}
+@keyframes slide-animation-01 {
+  0% {opacity: 1; transform: scale(1.0);}
+ 30% {opacity: 1;}
+ 40% {opacity: 0; transform: scale(1.15);}
+ 90% {opacity: 0}
+100% {opacity: 1; transform: scale(1.0);}
+}
+@keyframes slide-animation-02 {
+  0% {opacity: 0;}
+ 30% {opacity: 0; transform: scale(1.1);}
+ 40% {opacity: 1;}
+ 60% {opacity: 1;}
+ 70% {opacity: 0; transform: scale(1.0);}
+100% {opacity: 0;}
+}
+@keyframes slide-animation-03 {
+   0% {opacity: 0;}
+ 60% {opacity: 0;  transform: scale(1.0);}
+ 70% {opacity: 1;}
+ 90% {opacity: 1;}
+100% {opacity: 0; transform: scale(1.1);}
 }
