--- a/index.css
+++ b/index.css
@@ -562,10 +562,20 @@ hr {
 
 .img-frame{
   position: relative;
-  width: 100%;
-  height: 400px;
+  width: 38vw;
+  height: 38vw;
   overflow: hidden;
   margin: 0 auto;
+}
+
+@media only screen and (max-width: 767px) {
+  .img-frame{
+    position: relative;
+    width: 90vw;
+    height: 90vw;
+    overflow: hidden;
+    margin: 0 auto;
+  }
 }
 .img-01, .img-02, .img-03{
   position: absolute;
