--- a/index.css
+++ b/index.css
@@ -22,6 +22,10 @@ strong{
 .row{
   margin: 0px 0px;
 }
+.aboutusrow{
+  position:relative;
+  top:800px;
+}
 .col-md-8{
   padding-left: 0px;
   padding-right:0px;
@@ -29,6 +33,9 @@ strong{
 .col-6{
   padding:0px auto;
   text-align:center;
+}
+.col-md-12{
+  padding:0px 0px;
 }
 .footmidasi{
   font-size:20px;
@@ -196,6 +203,20 @@ strong{
     margin: 10px 0px
     
   }
+.container3 {
+  width: 92vw;
+  position: relative;
+  text-align: center;
+  top: 0px;
+  margin: 10px auto;
+}
+.container4 {
+  max-width: 100%;
+  position: relative;
+  text-align: center;
+  top: 0px;
+  margin: 10px auto;
+}
 .container2 {
   position: relative;
   top: 120px;
@@ -236,6 +257,13 @@ p {
   font-family: 'LineFont';
   font-size: 18px;
   margin: 10px 15px;
+  color:#000000;
+  }
+.intro3 {
+  text-align: left;
+  font-family: 'LineFont';
+  font-size: 18px;
+  margin: 10px 0px;
   color:#000000;
   }
 .desc {
@@ -312,6 +340,10 @@ p {
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
+  }
+  .aboutusrow{
+    position:relative;
+    top:650px;
   }
   .title2 {
     position: relative;
@@ -671,8 +703,23 @@ hr {
   margin: 10px auto;
   width: 100%;;
 }
+.dspcontainer{
+  max-width: 100%;
+  text-align: center;
+}
 .clicktxt {
   width: 53vw; 
+  color:#000000;
+  padding-top:10px;
+  padding-bottom:10px;
+  padding-left: 15px;
+  border-bottom:2px solid #000000;
+  text-align: left;
+  display: block;
+  font-family: 'LineFont';
+  }
+.clicktxt2 {
+  width: 92vw; 
   color:#000000;
   padding-top:10px;
   padding-bottom:10px;
