--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@
 }
 @font-face {
 	font-family: 'LineFontEb';
-	src: url(LINESeedJP_A_TTF_Eb.ttf);
+	src: url(LINESeedJP_A_TTF_Bd.ttf);
 }
 
 strong{
